SaranjeetKaur published a site update

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <meta name="author" content="R Contribution Working Group" />
 
 
-<meta name="date" content="2023-05-19" />
+<meta name="date" content="2023-05-24" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -193,15 +193,14 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 <li class="chapter" data-level="4" data-path="ReviewBugs.html"><a href="ReviewBugs.html"><i class="fa fa-check"></i><b>4</b> Reviewing Bugs</a>
 <ul>
-<li class="chapter" data-level="4.1" data-path="ReviewBugs.html"><a href="ReviewBugs.html#how-you-can-help-to-review-bug-reports"><i class="fa fa-check"></i><b>4.1</b> How you can help to review bug reports?</a></li>
-<li class="chapter" data-level="4.2" data-path="ReviewBugs.html"><a href="ReviewBugs.html#Bugzilla"><i class="fa fa-check"></i><b>4.2</b> Navigating Bugzilla</a>
+<li class="chapter" data-level="4.1" data-path="ReviewBugs.html"><a href="ReviewBugs.html#how-you-can-help-to-review-bug-reports"><i class="fa fa-check"></i><b>4.1</b> How you can help to review bug reports?</a>
 <ul>
-<li class="chapter" data-level="4.2.1" data-path="ReviewBugs.html"><a href="ReviewBugs.html#preparing-to-review-bug-reports"><i class="fa fa-check"></i><b>4.2.1</b> Preparing to review bug reports</a></li>
+<li class="chapter" data-level="4.1.1" data-path="ReviewBugs.html"><a href="ReviewBugs.html#preparing-to-review-bug-reports"><i class="fa fa-check"></i><b>4.1.1</b> Preparing to review bug reports</a></li>
 </ul></li>
-<li class="chapter" data-level="4.3" data-path="ReviewBugs.html"><a href="ReviewBugs.html#classifying-bug-reports"><i class="fa fa-check"></i><b>4.3</b> Classifying bug reports</a></li>
-<li class="chapter" data-level="4.4" data-path="ReviewBugs.html"><a href="ReviewBugs.html#how-to-find-a-bug-report-or-an-issue-to-review"><i class="fa fa-check"></i><b>4.4</b> How to find a bug report or an issue to review?</a></li>
-<li class="chapter" data-level="4.5" data-path="ReviewBugs.html"><a href="ReviewBugs.html#example-of-a-bug-review-submitted-on-bugzilla"><i class="fa fa-check"></i><b>4.5</b> Example of a bug review submitted on Bugzilla</a></li>
-<li class="chapter" data-level="4.6" data-path="ReviewBugs.html"><a href="ReviewBugs.html#see-also-2"><i class="fa fa-check"></i><b>4.6</b> See also</a></li>
+<li class="chapter" data-level="4.2" data-path="ReviewBugs.html"><a href="ReviewBugs.html#classifying-bug-reports"><i class="fa fa-check"></i><b>4.2</b> Classifying bug reports</a></li>
+<li class="chapter" data-level="4.3" data-path="ReviewBugs.html"><a href="ReviewBugs.html#how-to-find-a-bug-report-or-an-issue-to-review"><i class="fa fa-check"></i><b>4.3</b> How to find a bug report or an issue to review?</a></li>
+<li class="chapter" data-level="4.4" data-path="ReviewBugs.html"><a href="ReviewBugs.html#example-of-a-bug-review-submitted-on-bugzilla"><i class="fa fa-check"></i><b>4.4</b> Example of a bug review submitted on Bugzilla</a></li>
+<li class="chapter" data-level="4.5" data-path="ReviewBugs.html"><a href="ReviewBugs.html#see-also-2"><i class="fa fa-check"></i><b>4.5</b> See also</a></li>
 </ul></li>
 <li class="chapter" data-level="5" data-path="FindSource.html"><a href="FindSource.html"><i class="fa fa-check"></i><b>5</b> Finding the Source</a>
 <ul>
@@ -309,7 +308,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="header">
 <h1 class="title">R Development Guide</h1>
 <p class="author"><em>R Contribution Working Group</em></p>
-<p class="date"><em>2023-05-19</em></p>
+<p class="date"><em>2023-05-24</em></p>
 </div>
 <div id="section" class="section level1 unnumbered">
 <h1 class="unnumbered"></h1>
