--- a/BugTrack.html
+++ b/BugTrack.html
@@ -23,7 +23,7 @@
 <meta name="author" content="R Contribution Working Group" />
 
 
-<meta name="date" content="2023-05-19" />
+<meta name="date" content="2023-05-24" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -193,15 +193,14 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 <li class="chapter" data-level="4" data-path="ReviewBugs.html"><a href="ReviewBugs.html"><i class="fa fa-check"></i><b>4</b> Reviewing Bugs</a>
 <ul>
-<li class="chapter" data-level="4.1" data-path="ReviewBugs.html"><a href="ReviewBugs.html#how-you-can-help-to-review-bug-reports"><i class="fa fa-check"></i><b>4.1</b> How you can help to review bug reports?</a></li>
-<li class="chapter" data-level="4.2" data-path="ReviewBugs.html"><a href="ReviewBugs.html#Bugzilla"><i class="fa fa-check"></i><b>4.2</b> Navigating Bugzilla</a>
+<li class="chapter" data-level="4.1" data-path="ReviewBugs.html"><a href="ReviewBugs.html#how-you-can-help-to-review-bug-reports"><i class="fa fa-check"></i><b>4.1</b> How you can help to review bug reports?</a>
 <ul>
-<li class="chapter" data-level="4.2.1" data-path="ReviewBugs.html"><a href="ReviewBugs.html#preparing-to-review-bug-reports"><i class="fa fa-check"></i><b>4.2.1</b> Preparing to review bug reports</a></li>
+<li class="chapter" data-level="4.1.1" data-path="ReviewBugs.html"><a href="ReviewBugs.html#preparing-to-review-bug-reports"><i class="fa fa-check"></i><b>4.1.1</b> Preparing to review bug reports</a></li>
 </ul></li>
-<li class="chapter" data-level="4.3" data-path="ReviewBugs.html"><a href="ReviewBugs.html#classifying-bug-reports"><i class="fa fa-check"></i><b>4.3</b> Classifying bug reports</a></li>
-<li class="chapter" data-level="4.4" data-path="ReviewBugs.html"><a href="ReviewBugs.html#how-to-find-a-bug-report-or-an-issue-to-review"><i class="fa fa-check"></i><b>4.4</b> How to find a bug report or an issue to review?</a></li>
-<li class="chapter" data-level="4.5" data-path="ReviewBugs.html"><a href="ReviewBugs.html#example-of-a-bug-review-submitted-on-bugzilla"><i class="fa fa-check"></i><b>4.5</b> Example of a bug review submitted on Bugzilla</a></li>
-<li class="chapter" data-level="4.6" data-path="ReviewBugs.html"><a href="ReviewBugs.html#see-also-2"><i class="fa fa-check"></i><b>4.6</b> See also</a></li>
+<li class="chapter" data-level="4.2" data-path="ReviewBugs.html"><a href="ReviewBugs.html#classifying-bug-reports"><i class="fa fa-check"></i><b>4.2</b> Classifying bug reports</a></li>
+<li class="chapter" data-level="4.3" data-path="ReviewBugs.html"><a href="ReviewBugs.html#how-to-find-a-bug-report-or-an-issue-to-review"><i class="fa fa-check"></i><b>4.3</b> How to find a bug report or an issue to review?</a></li>
+<li class="chapter" data-level="4.4" data-path="ReviewBugs.html"><a href="ReviewBugs.html#example-of-a-bug-review-submitted-on-bugzilla"><i class="fa fa-check"></i><b>4.4</b> Example of a bug review submitted on Bugzilla</a></li>
+<li class="chapter" data-level="4.5" data-path="ReviewBugs.html"><a href="ReviewBugs.html#see-also-2"><i class="fa fa-check"></i><b>4.5</b> See also</a></li>
 </ul></li>
 <li class="chapter" data-level="5" data-path="FindSource.html"><a href="FindSource.html"><i class="fa fa-check"></i><b>5</b> Finding the Source</a>
 <ul>
@@ -372,7 +371,7 @@ When you are in doubt that there is a bug: (which should be the case most of the
 <ol style="list-style-type: decimal">
 <li><p>Packages that are supported by the R-Core are labelled with <code>Maintainer: R Core Team &lt;R-core@r-project.org&gt;</code>. One simple way to get the information from R is by running the <code>maintainer("package_name")</code> command.</p></li>
 <li><p>The bug report for R-Core supported packages, their documentations, and/ or a bug report for the R language itself can be submitted either to R-devel, <a href="https://www.r-project.org/posting-guide.html#which_list">see posting guide</a>, or to <a href="https://bugs.r-project.org/bugzilla/">Bugzilla</a>. In the future, we hope to have an option to report an issue to the <a href="https://github.com/r-devel/r-svn/issues">GitHub Mirror of the R svn server</a>.</p></li>
-<li><p>If you want to submit the bug report using <a href="ReviewBugs.html#Bugzilla">Bugzilla</a>, please ensure that you have a Bugzilla account. To get a Bugzilla account, please send an e-mail to <code>bug-report-request@r-project.org</code> from the address that you want to use as your login. In this e-mail, briefly explain why you need an account. A volunteer shall then create a Bugzilla account and add you to R’s Bugzilla members.</p></li>
+<li><p>If you want to submit the bug report using <a href="#Bugzilla">Bugzilla</a>, please ensure that you have a Bugzilla account. To get a Bugzilla account, please send an e-mail to <code>bug-report-request@r-project.org</code> from the address that you want to use as your login. In this e-mail, briefly explain why you need an account. A volunteer shall then create a Bugzilla account and add you to R’s Bugzilla members.</p></li>
 <li><p>Please ensure whether the bug is already fixed (in the upcoming changes in R) or reported (search for it from those already reported on Bugzilla, either on <a href="https://bugs.r-project.org/bugzilla/query.cgi">search existing bug reports</a>, using the <a href="https://bugs.r-project.org/bugzilla/query.cgi?format=advanced">advanced search</a> option here, or <a href="https://bugs.r-project.org/bugzilla/buglist.cgi?bug_file_loc_type=allwordssubstr&amp;bug_status=NEW&amp;bug_status=ASSIGNED&amp;bug_status=CONFIRMED&amp;bug_status=REOPENED&amp;bug_status=UNCONFIRMED&amp;bugidtype=include&amp;chfieldto=Now&amp;cmdtype=doit&amp;emailassigned_to1=1&amp;emailassigned_to2=1&amp;emailcc2=1&amp;emailreporter2=1&amp;emailtype1=substring&amp;emailtype2=substring&amp;field0-0-0=noop&amp;long_desc_type=substring&amp;order=bugs.delta_ts%20desc&amp;query_format=advanced&amp;short_desc_type=allwordssubstr&amp;type0-0-0=noop">show open bugs new-to-old</a>).</p></li>
 </ol>
 </div>
