SaranjeetKaur published a site update

--- a/Doc.html
+++ b/Doc.html
@@ -23,7 +23,7 @@
 <meta name="author" content="R Contribution Working Group" />
 
 
-<meta name="date" content="2023-06-17" />
+<meta name="date" content="2023-06-18" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -238,7 +238,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="7.4" data-path="Doc.html"><a href="Doc.html#helping-with-documentation"><i class="fa fa-check"></i><b>7.4</b> Helping with documentation</a></li>
 <li class="chapter" data-level="7.5" data-path="Doc.html"><a href="Doc.html#proofreading"><i class="fa fa-check"></i><b>7.5</b> Proofreading</a></li>
 <li class="chapter" data-level="7.6" data-path="Doc.html"><a href="Doc.html#helping-with-the-developers-guide"><i class="fa fa-check"></i><b>7.6</b> Helping with the Developer’s Guide</a></li>
-<li class="chapter" data-level="7.7" data-path="Doc.html"><a href="Doc.html#instructions-for-reporting-the-cran-policy-bugs-discussion-in-slack-random-channel"><i class="fa fa-check"></i><b>7.7</b> Instructions for reporting the CRAN policy bugs – discussion in slack (random channel)</a></li>
+<li class="chapter" data-level="7.7" data-path="Doc.html"><a href="Doc.html#reporting-documentation-bugs"><i class="fa fa-check"></i><b>7.7</b> Reporting documentation bugs</a></li>
 <li class="chapter" data-level="7.8" data-path="Doc.html"><a href="Doc.html#see-also-5"><i class="fa fa-check"></i><b>7.8</b> See also</a></li>
 </ul></li>
 <li class="chapter" data-level="8" data-path="message-translations.html"><a href="message-translations.html"><i class="fa fa-check"></i><b>8</b> Message Translations</a>
@@ -434,8 +434,14 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <p>The Developer’s Guide (what you are reading now) uses the same process as the main R documentation, except for some small differences. The source lives in a <a href="https://github.com/r-devel/rdevguide/">GitHub repository</a> and bug reports should be submitted to the <a href="https://github.com/r-devel/rdevguide/issues">devguide GitHub tracker</a>.</p>
 <p>Our dev guide workflow uses continuous integration and deployment so changes to the dev guide are normally published when the pull request is merged. <a href="introduction.html#how-to-contribute-to-this-guide">How to contribute to this guide from the introduction.</a></p>
 </div>
-<div id="instructions-for-reporting-the-cran-policy-bugs-discussion-in-slack-random-channel" class="section level2 hasAnchor" number="7.7">
-<h2><span class="header-section-number">7.7</span> Instructions for reporting the CRAN policy bugs – discussion in slack (random channel)<a href="Doc.html#instructions-for-reporting-the-cran-policy-bugs-discussion-in-slack-random-channel" class="anchor-section" aria-label="Anchor link to header"></a></h2>
+<div id="reporting-documentation-bugs" class="section level2 hasAnchor" number="7.7">
+<h2><span class="header-section-number">7.7</span> Reporting documentation bugs<a href="Doc.html#reporting-documentation-bugs" class="anchor-section" aria-label="Anchor link to header"></a></h2>
+<p><!---
+discussion in slack (random channel)
+--></p>
+<p>If you find some typo or problem on the <a href="https://cran.r-project.org">CRAN</a> webpages you can write a polite email to <code>CRAN@r-project.org</code> to report it. As an alternative, one can also write to the R-devel mailing list or submit a bug report via R’s Bugzilla.</p>
+<p>For improvements of the R-manuals or reporting typos or bugs in the R-manuals, submit a bug report to R’s Bugzilla.</p>
+<p>For reporting bugs or typos on the webpages or documentation about a particular package, write to the corresponding package maintainer. To find the maintainer of a package, use the command <code>maintainer("package-name")</code>.</p>
 <p><strong>Note</strong>:</p>
 <p>There is a <code>#core-documentation</code> channel on the <a href="https://r-contributors.slack.com/">R Contributors slack</a> where you can discuss about the patches for improvements to R’s documentation.</p>
 </div>
