--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <meta name="author" content="R Contribution Working Group" />
 
 
-<meta name="date" content="2023-06-17" />
+<meta name="date" content="2023-06-18" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -238,7 +238,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="7.4" data-path="Doc.html"><a href="Doc.html#helping-with-documentation"><i class="fa fa-check"></i><b>7.4</b> Helping with documentation</a></li>
 <li class="chapter" data-level="7.5" data-path="Doc.html"><a href="Doc.html#proofreading"><i class="fa fa-check"></i><b>7.5</b> Proofreading</a></li>
 <li class="chapter" data-level="7.6" data-path="Doc.html"><a href="Doc.html#helping-with-the-developers-guide"><i class="fa fa-check"></i><b>7.6</b> Helping with the Developer’s Guide</a></li>
-<li class="chapter" data-level="7.7" data-path="Doc.html"><a href="Doc.html#instructions-for-reporting-the-cran-policy-bugs-discussion-in-slack-random-channel"><i class="fa fa-check"></i><b>7.7</b> Instructions for reporting the CRAN policy bugs – discussion in slack (random channel)</a></li>
+<li class="chapter" data-level="7.7" data-path="Doc.html"><a href="Doc.html#reporting-documentation-bugs"><i class="fa fa-check"></i><b>7.7</b> Reporting documentation bugs</a></li>
 <li class="chapter" data-level="7.8" data-path="Doc.html"><a href="Doc.html#see-also-5"><i class="fa fa-check"></i><b>7.8</b> See also</a></li>
 </ul></li>
 <li class="chapter" data-level="8" data-path="message-translations.html"><a href="message-translations.html"><i class="fa fa-check"></i><b>8</b> Message Translations</a>
@@ -308,7 +308,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="header">
 <h1 class="title">R Development Guide</h1>
 <p class="author"><em>R Contribution Working Group</em></p>
-<p class="date"><em>2023-06-17</em></p>
+<p class="date"><em>2023-06-18</em></p>
 </div>
 <div id="section" class="section level1 unnumbered">
 <h1 class="unnumbered"></h1>
