--- a/Doc.html
+++ b/Doc.html
@@ -232,14 +232,13 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 <li class="chapter" data-level="7" data-path="Doc.html"><a href="Doc.html"><i class="fa fa-check"></i><b>7</b> Documenting R</a>
 <ul>
-<li class="chapter" data-level="7.1" data-path="Doc.html"><a href="Doc.html#introduction-2"><i class="fa fa-check"></i><b>7.1</b> Introduction</a></li>
-<li class="chapter" data-level="7.2" data-path="Doc.html"><a href="Doc.html#guidelines-for-writing-r-help-files"><i class="fa fa-check"></i><b>7.2</b> Guidelines for writing R help files</a></li>
-<li class="chapter" data-level="7.3" data-path="Doc.html"><a href="Doc.html#r-manuals"><i class="fa fa-check"></i><b>7.3</b> R manuals</a></li>
-<li class="chapter" data-level="7.4" data-path="Doc.html"><a href="Doc.html#helping-with-documentation"><i class="fa fa-check"></i><b>7.4</b> Helping with documentation</a></li>
-<li class="chapter" data-level="7.5" data-path="Doc.html"><a href="Doc.html#proofreading"><i class="fa fa-check"></i><b>7.5</b> Proofreading</a></li>
-<li class="chapter" data-level="7.6" data-path="Doc.html"><a href="Doc.html#helping-with-the-developers-guide"><i class="fa fa-check"></i><b>7.6</b> Helping with the Developer’s Guide</a></li>
-<li class="chapter" data-level="7.7" data-path="Doc.html"><a href="Doc.html#reporting-documentation-bugs"><i class="fa fa-check"></i><b>7.7</b> Reporting documentation bugs</a></li>
-<li class="chapter" data-level="7.8" data-path="Doc.html"><a href="Doc.html#see-also-5"><i class="fa fa-check"></i><b>7.8</b> See also</a></li>
+<li class="chapter" data-level="7.1" data-path="Doc.html"><a href="Doc.html#guidelines-for-writing-r-help-files"><i class="fa fa-check"></i><b>7.1</b> Guidelines for writing R help files</a></li>
+<li class="chapter" data-level="7.2" data-path="Doc.html"><a href="Doc.html#r-manuals"><i class="fa fa-check"></i><b>7.2</b> R manuals</a></li>
+<li class="chapter" data-level="7.3" data-path="Doc.html"><a href="Doc.html#helping-with-documentation"><i class="fa fa-check"></i><b>7.3</b> Helping with documentation</a></li>
+<li class="chapter" data-level="7.4" data-path="Doc.html"><a href="Doc.html#proofreading"><i class="fa fa-check"></i><b>7.4</b> Proofreading</a></li>
+<li class="chapter" data-level="7.5" data-path="Doc.html"><a href="Doc.html#helping-with-the-developers-guide"><i class="fa fa-check"></i><b>7.5</b> Helping with the Developer’s Guide</a></li>
+<li class="chapter" data-level="7.6" data-path="Doc.html"><a href="Doc.html#reporting-documentation-bugs"><i class="fa fa-check"></i><b>7.6</b> Reporting documentation bugs</a></li>
+<li class="chapter" data-level="7.7" data-path="Doc.html"><a href="Doc.html#see-also-5"><i class="fa fa-check"></i><b>7.7</b> See also</a></li>
 </ul></li>
 <li class="chapter" data-level="8" data-path="message-translations.html"><a href="message-translations.html"><i class="fa fa-check"></i><b>8</b> Message Translations</a>
 <ul>
@@ -307,18 +306,13 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
             <section class="normal" id="section-">
 <div id="Doc" class="section level1 hasAnchor" number="7">
 <h1><span class="header-section-number">Chapter 7</span> Documenting R<a href="Doc.html#Doc" class="anchor-section" aria-label="Anchor link to header"></a></h1>
-<p>The R language has a substantial body of documentation, much of which is contributed by various authors. The help files for R functions are written in ‘R documentation’ (<code>.Rd</code>) file format. It is a simple markup language with close resemblance to LaTeX. The <code>.Rd</code> file format can be further processed into a variety of formats, including LaTeX, HTML, and plain text.</p>
-<p>This chapter describes the styleguide for R’s documentation, how to document for R, report and review bugs (and/or suggest corrections for them) in the existing documentation. If you are interested in contributing to R’s documentation, your contributions are more than welcome.</p>
-<div id="introduction-2" class="section level2 hasAnchor" number="7.1">
-<h2><span class="header-section-number">7.1</span> Introduction<a href="Doc.html#introduction-2" class="anchor-section" aria-label="Anchor link to header"></a></h2>
-<p>R’s documentation has long been considered to be good for a free programming language. The core developers have been committed to providing good documentation on the language and its packages. The continuing involvement of the user community in providing assistance for creating and maintaining documentation has also supported a lot.</p>
-<p>The involvement of the community takes many forms, from authoring to making bug reports or raising an issue when the documentation could be more complete or easier to use.</p>
-<p>This chapter is aimed at authors and potential authors of R documentation provided by the help files. More specifically, it is for people contributing to the standard documentation and for those developing additional documents using the same tools as the standard documents. Any time you feel that you can clarify and improve existing documentation or provide documentation that is missing, your contribution is welcome and appreciated. If you find it difficult to deal with the markup language, you can ask for help for that part too. Please do not let the material in this chapter stand between the documentation and your desire to help out. However, not every good faith effort to change or extend the documentation will be accepted - sometimes the patch contribution might be incorrect, other times, while a change in wording may make some things clearer and easier to understand, other finer details of some corner case may become less clear, leading to the patch being declined or modified by the member of R Core reviewing it before applying it (if they agree the issue is important enough to fix).</p>
-</div>
-<div id="guidelines-for-writing-r-help-files" class="section level2 hasAnchor" number="7.2">
-<h2><span class="header-section-number">7.2</span> Guidelines for writing R help files<a href="Doc.html#guidelines-for-writing-r-help-files" class="anchor-section" aria-label="Anchor link to header"></a></h2>
-<p>This section summarises the <a href="https://developer.r-project.org/Rds.html">recommended style for writing the R help files</a>. The R help files are written in “R documentation” (Rd) format, a markup language which resembles LaTeX. An example of the <code>.Rd</code> format is available for <a href="https://svn.r-project.org/R/trunk/src/library/base/man/mean%60.Rd%60">mean<code>.Rd</code></a>. These are intended for writing the core documentations but may also be useful for package writers. Extensive details of writing R documentation files can be found in the <a href="https://cran.r-project.org/doc/manuals/r-release/R-exts.html#Writing-R-documentation-files">Writing R Extensions</a> manual.</p>
-<p>Note: Many R package authors use the R package <a href="https://cran.r-project.org/web/packages/roxygen2/index.html">roxygen2</a> to write documentation (which eventually creates the <code>.Rd</code> files), however, in this guide we focus on <code>.Rd</code> files only because the manual pages for the base distribution are written directly as <code>.Rd</code> files.</p>
+<p>R has a substantial body of documentation, comprising help files for the core packages and a set of manuals aimed at users (An Introduction to R, R Data Import/Export), system administrators (R Installation and Administration) and developers (Writing R Extensions, The R language definition, and R Internals). This documentation was developed by the R Core Team with input from external contributors. The continuing involvement of the user community is important in maintaining this valuable documentation.</p>
+<p>The involvement of the community takes many forms, from contributing content, to making bug reports or raising an issue when the documentation could be more complete or made easier to follow.</p>
+<p>This chapter is about the ways people can contribute to R’s documentation, with guidance on how to do that. Any time you feel that you can clarify or fill gaps in existing documentation, your contribution is welcome and appreciated. If you find it difficult to deal with the markup used in the source files, you can ask for help with that part too. Please do not let the material in this chapter stand between the documentation and your desire to help out. However, not every good faith effort to change or extend the documentation will be accepted - sometimes the suggested changes may be incorrect; other times, while a change in wording may make some things clearer and easier to understand, the finer details of some corner case may become less clear, leading to the suggested changes being declined or modified by a member of R Core before applying them (if they agree the issue is important enough to fix).</p>
+<div id="guidelines-for-writing-r-help-files" class="section level2 hasAnchor" number="7.1">
+<h2><span class="header-section-number">7.1</span> Guidelines for writing R help files<a href="Doc.html#guidelines-for-writing-r-help-files" class="anchor-section" aria-label="Anchor link to header"></a></h2>
+<p>The help files for R functions are written in ‘R documentation’ (<code>.Rd</code>) file format. It is a simple markup language with close resemblance to LaTeX. The <code>.Rd</code> file format can be further processed into a variety of formats, including LaTeX, HTML, and plain text. The <code>.Rd</code> files can be found in the <code>man</code> directory of the sources for the corresponding base package, for example <a href="https://svn.r-project.org/R/trunk/src/library/base/man/mean.Rd" class="uri">https://svn.r-project.org/R/trunk/src/library/base/man/mean.Rd</a>. Many authors of contributed R packages use the <a href="https://cran.r-project.org/package=roxygen2">roxygen2</a> package to write documentation, which generates <code>.Rd</code> files from comments in the package <code>.R</code> files. However, the help files in the base distribution are maintained by directly editing the <code>.Rd</code> files.</p>
+<p>This section gives an overview of the <code>.Rd</code> format and summarises the <a href="https://developer.r-project.org/Rds.html">guidelines for writing the R help files</a>. The guidelines are intended for contributors to base R, but may also be useful for authors of contributed packages. Full documentation on writing R documentation files can be found in the <a href="https://cran.r-project.org/doc/manuals/r-release/R-exts.html#Writing-R-documentation-files">Writing R Extensions</a> manual.</p>
 <p>There are three main parts of an <code>.Rd</code> file:</p>
 <ol style="list-style-type: decimal">
 <li><p><strong>Header</strong>: This part is for the basic information of the document/file. For instance, the name of the file, the topics documented, a title, a short textual description, and R usage information for the objects documented.</p></li>
@@ -372,8 +366,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ol>
 <p>Extensive details of writing R documentation files can be found <a href="https://cran.r-project.org/doc/manuals/r-release/R-exts.html#Writing-R-documentation-files">here</a>.</p>
 </div>
-<div id="r-manuals" class="section level2 hasAnchor" number="7.3">
-<h2><span class="header-section-number">7.3</span> R manuals<a href="Doc.html#r-manuals" class="anchor-section" aria-label="Anchor link to header"></a></h2>
+<div id="r-manuals" class="section level2 hasAnchor" number="7.2">
+<h2><span class="header-section-number">7.2</span> R manuals<a href="Doc.html#r-manuals" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p>The <a href="https://cran.r-project.org/manuals.html">R manuals</a> are a part of the <a href="https://svn.r-project.org/R/trunk/doc/manual/">R sources</a>. Hence, bug reports/patches can also be submitted via Bugzilla, e.g. <a href="https://bugs.r-project.org/bugzilla/show_bug.cgi?id=15221">Bug 15221 - R-admin/‘Installing R under Windows’: Missing argument name</a>. Note that they are typically referred to by their file names as listed below:</p>
 <table>
 <thead>
@@ -416,26 +410,26 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li>The <a href="https://www.gnu.org/software/texinfo/">Texinfo manual</a> should be referred to for <a href="https://www.gnu.org/software/texinfo/manual/texinfo/texinfo.html">how to mark up text</a>.</li>
 </ul>
 </div>
-<div id="helping-with-documentation" class="section level2 hasAnchor" number="7.4">
-<h2><span class="header-section-number">7.4</span> Helping with documentation<a href="Doc.html#helping-with-documentation" class="anchor-section" aria-label="Anchor link to header"></a></h2>
+<div id="helping-with-documentation" class="section level2 hasAnchor" number="7.3">
+<h2><span class="header-section-number">7.3</span> Helping with documentation<a href="Doc.html#helping-with-documentation" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p>Maintaining the accuracy of R’s documentations and keeping a high level of quality takes a lot of effort. Community members, like you, help with writing, editing, and updating content, and these contributions are appreciated and welcomed.</p>
 <p>Looking at pre-existing documentation source files can be very helpful when getting started.</p>
 <p>You can directly search for <a href="https://bugs.r-project.org/buglist.cgi?component=Documentation&amp;list_id=22501&amp;product=R&amp;resolution=---">documentation issues/bugs on Bugzilla</a>. Issues vary from typos to unclear documentation and items lacking documentation.</p>
 <p>If you see a documentation issue that you would like to tackle, you can leave a comment on the issue saying you are going to try to solve the issue and mention roughly how long you think you will take to do so (this allows others to take on the issue if you happen to forget or lose interest).</p>
 <p>If you find some typo or problem on <a href="https://cran.r-project.org">CRAN</a> after checking the problem or typo you can write a polite email to <code>cran-sysadmin@r-project.org</code> and one of the R-core members working with CRAN. You’ll probably get a prompt reply about how the issue is going to be fixed.</p>
 </div>
-<div id="proofreading" class="section level2 hasAnchor" number="7.5">
-<h2><span class="header-section-number">7.5</span> Proofreading<a href="Doc.html#proofreading" class="anchor-section" aria-label="Anchor link to header"></a></h2>
+<div id="proofreading" class="section level2 hasAnchor" number="7.4">
+<h2><span class="header-section-number">7.4</span> Proofreading<a href="Doc.html#proofreading" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p>While an issue filed on Bugzilla means there is a known issue somewhere, that does not mean there are not other issues lurking about in the documentation. Proofreading a part of the documentation can often uncover problems.</p>
 <p>If you decide to proofread, read a section of the documentation from start to finish, filing issues in Bugzilla for each major type of problem you find. It is best to avoid filing a single issue for an entire section containing multiple problems; instead, file several issues so that it is easier to break the work up for multiple people and more efficient review.</p>
 </div>
-<div id="helping-with-the-developers-guide" class="section level2 hasAnchor" number="7.6">
-<h2><span class="header-section-number">7.6</span> Helping with the Developer’s Guide<a href="Doc.html#helping-with-the-developers-guide" class="anchor-section" aria-label="Anchor link to header"></a></h2>
+<div id="helping-with-the-developers-guide" class="section level2 hasAnchor" number="7.5">
+<h2><span class="header-section-number">7.5</span> Helping with the Developer’s Guide<a href="Doc.html#helping-with-the-developers-guide" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p>The Developer’s Guide (what you are reading now) uses the same process as the main R documentation, except for some small differences. The source lives in a <a href="https://github.com/r-devel/rdevguide/">GitHub repository</a> and bug reports should be submitted to the <a href="https://github.com/r-devel/rdevguide/issues">devguide GitHub tracker</a>.</p>
 <p>Our dev guide workflow uses continuous integration and deployment so changes to the dev guide are normally published when the pull request is merged. <a href="introduction.html#how-to-contribute-to-this-guide">How to contribute to this guide from the introduction.</a></p>
 </div>
-<div id="reporting-documentation-bugs" class="section level2 hasAnchor" number="7.7">
-<h2><span class="header-section-number">7.7</span> Reporting documentation bugs<a href="Doc.html#reporting-documentation-bugs" class="anchor-section" aria-label="Anchor link to header"></a></h2>
+<div id="reporting-documentation-bugs" class="section level2 hasAnchor" number="7.6">
+<h2><span class="header-section-number">7.6</span> Reporting documentation bugs<a href="Doc.html#reporting-documentation-bugs" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><!---
 discussion in slack (random channel)
 --></p>
@@ -445,8 +439,8 @@ discussion in slack (random channel)
 <p><strong>Note</strong>:</p>
 <p>There is a <code>#core-documentation</code> channel on the <a href="https://r-contributors.slack.com/">R Contributors slack</a> where you can discuss about the patches for improvements to R’s documentation.</p>
 </div>
-<div id="see-also-5" class="section level2 hasAnchor" number="7.8">
-<h2><span class="header-section-number">7.8</span> See also<a href="Doc.html#see-also-5" class="anchor-section" aria-label="Anchor link to header"></a></h2>
+<div id="see-also-5" class="section level2 hasAnchor" number="7.7">
+<h2><span class="header-section-number">7.7</span> See also<a href="Doc.html#see-also-5" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <ol style="list-style-type: decimal">
 <li><a href="https://cran.r-project.org/doc/manuals/r-release/R-exts.html#Writing-R-documentation-files">Writing R documentation files</a></li>
 </ol>
